--- a/libs/gridmap/src/lib/containers/vehicles-grid-list/vehicles-grid-list.component.html
+++ b/libs/gridmap/src/lib/containers/vehicles-grid-list/vehicles-grid-list.component.html
@@ -44,11 +44,23 @@
       <!--</mat-card>-->
       <mat-card (click)="onClick(vehicle)" [class.active]="selection.isSelected(vehicle)">
         <mat-card-header>
-            Vehicle card-header
+            <mat-card-title>{{ vehicle.properties.name }}</mat-card-title>
         </mat-card-header>
-        <!--<img mat-card-image src="{{vehicle.picture.medium}}">-->
+          <mat-card-subtitle>Bikes available: {{vehicle.properties.num_bikes_available}} &nbsp;
+          Docks available: {{vehicle.properties.num_docks_available}}</mat-card-subtitle>
         <mat-card-content>
-          Vehicle card-header
+          
+          Reported:
+          {{vehicle.properties.last_reported | amCalendar}}<br>
+          <!--
+          is_renting: {{account.properties.is_renting}}<br>
+          is_returning: {{account.properties.is_returning}}<br>
+          -->
+
+          
+          Region: {{vehicle.properties.region_id}} {{vehicle.properties.location_type}}<br>
+          System: {{vehicle.properties.system_id}}<br>
+          
         </mat-card-content>
         <mat-card-actions>
           <button mat-button>LIKE</button>
@@ -70,7 +82,7 @@
         Grid List Test
         
         <p matLine><span></span><span class="subline">-- </span></p>
-        
+
         <mat-divider [inset]="true" *ngIf="!last"></mat-divider>
       </mat-list-item>
       <mat-divider></mat-divider>
